--- a/trivia_app/templates/trivia_app/question_list.html
+++ b/trivia_app/templates/trivia_app/question_list.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>{{ category.name }} Questions</title>
-</head>
-<body>
+{% extends 'trivia_app/base.html' %}
+
+{% block title %}{{ category.name }} Questions{% endblock %}
+
+{% block content %}
     <h1>Questions for {{ category.name }}</h1>
     <ul>
         {% for question in questions %}
             <li><a href="{% url 'question_detail' question.id %}">{{ question.text }}</a></li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
