Update home page template to enhance welcome message and link to categories

--- a/trivia_app/templates/trivia_app/home.html
+++ b/trivia_app/templates/trivia_app/home.html
@@ -1,9 +1,10 @@
-{% extends "trivia_app/base.html" %}
+<!-- home.html -->
+{% extends 'trivia_app/base.html' %}
 
-{% block title %}Home - Trivia App{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>Welcome to the Trivia App!</h1>
-<p>Choose a category and start answering questions!</p>
-<a href="{% url 'category_list' %}">View Categories</a>
+    <h2>Welcome to Trivia App</h2>
+    <p>Test your knowledge with our trivia questions.</p>
+    <a href="{% url 'trivia_app:categories' %}">View Categories</a>
 {% endblock %}
