--- a/trivia_app/templates/trivia_app/question.html
+++ b/trivia_app/templates/trivia_app/question.html
@@ -4,16 +4,21 @@
 {% block title %}Question{% endblock %}
 
 {% block content %}
-    <h3>{{ question.text }}</h3>
-    <form method="POST" action="{% url 'trivia_app:save_answer' question.category.id question_index %}">
-        {% csrf_token %}
-        <input type="hidden" name="question_id" value="{{ question.id }}">
-        {% for answer in question.answers.all %}
-            <label>
-                <input type="radio" name="answer" value="{{ answer.text }}">
-                {{ answer.text }}
-            </label><br>
-        {% endfor %}
-        <button type="submit">Next</button>
-    </form>
+    <div class="flex flex-col justify-center space-y-4 w-full">
+        <h3 class="text-lg sm:text-2xl">{{ question.text }}</h3>
+        <form method="POST" action="{% url 'trivia_app:save_answer' question.category.id question_index %}" class="ml-2 sm:ml-4 space-y-2 ">
+            {% csrf_token %}
+            <input type="hidden" name="question_id" value="{{ question.id }}">
+            {% for answer in answers %}
+                <label class="text-base sm:text-lg">
+                    <input type="radio" name="answer" value="{{ answer.text }}">
+                    {{ answer.text }}
+                </label><br>
+            {% endfor %}
+            <div class="pt-5 flex justify-between space-x-4">
+                <button onclick="window.history.back()" class="btn-primary">Back</button>
+                <button type="submit" class="btn-primary">Next</button>
+            </div>
+        </form>
+    </div>
 {% endblock %}
